Fixed code spacing
Fixed code spacing issues to make it pretty.

--- a/css/main.css
+++ b/css/main.css
@@ -266,7 +266,7 @@ a:active{
 }
 
 .footer {
-	overflow: hidden;
+	overflow:hidden;
 
 	background-color: #111;
 }
@@ -451,10 +451,6 @@ a:active{
 .labels {
 	float: left;
 	width:80%;
-}
-
-
-
 }
 
 @media only screen and (min-width: 60em){
